# Mailing-Service

./: .env  .env.sample  README.md  appsheduler.py  pyproject.toml
blog/: urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_list.html
config/: settings.py  urls.py
customers/: admin.py  forms.py  models.py  urls.py  views.py
customers/migrations/: 0001_initial.py  0002_customer_slug.py  0003_customer_created_by.py  0004_alter_customer_slug.py
customers/templates/customers/: customer_confitm_delete.html  customer_detail.html  customer_list.html  not_unique.html
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: run.py  run_mailing.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_options.py  0003_alter_mailing_message.py  0004_mailing_slug_alter_mailing_message.py  0005_log.py  0006_mailing_created_by.py  0007_mailing_topic_mailing.py  0008_alter_mailing_slug.py  0009_alter_mailing_topic_mailing.py
mailing/templates/mailing/: access_error.html  base.html  index.html  log_detail.html  log_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  (+1 more)
message/: admin.py  forms.py  models.py  urls.py  views.py
message/migrations/: 0001_initial.py  0002_message_slug.py  0003_message_created_by.py  0004_alter_message_slug.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_country_user_is_manager.py  0003_user_slug.py  0004_alter_user_options.py  0005_alter_user_slug.py
(+10 files in other folders)
