[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytz = "^2024.1"
django-apscheduler = "^0.6.2"
apscheduler = "^3.10.4"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
django = "4.2.2"
redis = "^5.0.5"
pillow = "^10.3.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
